--- a/index.html
+++ b/index.html
@@ -7,22 +7,19 @@
     <title>꿈꾸는 동화::Dreaming Story</title>
     <!--나중에 favicon 제작 후 넣기-->
     <!--필요시 js-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--css-->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="top">
-        <div class="logo"><a href="#"><img src="img/dreaming story logo.png" alt="logo"></a></div>
-        <ul class="character_btn">
-            <li><a href="character_01.html"> Arika</a></li>
-            <li><a href="character_02.html"> Iyze</a></li>
-            <li><a href="character_03.html"> Arous</a></li>
-        </ul>
+        <div class="logo"><a href="index.html"><img src="img/dreaming story logo.png" alt="logo" style="width: 100%;"></a></div>
+        <!--meun 생각중-->
     </div>
-    <div id="banner_wrap"><!--banner_wrap_S-->
-        <div class="banner">
-            <div class="banner_text">
-                <h1>꿈꾸는 동화</h1>
+    <div id="section1_wrap">
+        <div class="section1">
+            <div class="section1_text">
+                <!-- <h1>꿈꾸는 동화</h1>
                 <h2>Dreaming Story</h2>
                 <br>
                 <p>
@@ -37,16 +34,55 @@
                 <br>
                 누구나 그렇듯 우리 모두는 평화로운 세상을 원합니다. <br><br>
                 각자의 가치관의 충돌로 인하여 일그러진 관계를 다시 회복할 수 있을까요?
-                </p>
+                </p> -->
+                <h1>Dreaming</h1>
+                <h1>Story</h1>
+            </div>
+            <div class="section1_mini_text">
+                <p>Dream Dream Dream</p>
+                <p>Dream Dream Dream</p>
+                <p>Dream Dream Dream</p>
+                <p>Dream Dream Dream</p>
+                <p>Dream Dream Dream</p>
+            </div>
+            <div class="section1_img">
+
             </div>
         </div>
-        <!-- <div class="banner_btn_Wrap">
-            <div class="banner_btn">
-                <div class="btn btn1"><a href="#"><h1>세계관</h1></a></div>
-                <div class="btn btn2"><a href="#"><h1>캐릭터</h1></a></div>
-                <div class="btn btn3"><a href="#"><h1>기타</h1></a></div>
+    </div>
+    <div id="section2_wrap">        
+        <!-- <div class="bg">
+        <video muted autoplay loop width="100%">
+            <source src="video/stars_-_109821 (1080p).mp4" type="video/mp4">
+          </video>
+    </div> -->
+        <div class="section2">
+            <div class="character_box">
+                <li><a href="character_01.html"></a></li> <!--아리카-->
+                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--네리-->
+                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--이화-->
+                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--선율-->
+                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--서이인-->
+                <li><a href="character_02.html"></a></li> <!--아이즈-->
+                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--천솔-->
+                <li><a href="character_08.html"></a></li> <!--모카-->
+                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--모니카-->
+                <li><a href="character_03.html"></a></li> <!--아루스-->
             </div>
-        </div> -->
-        </div><!--banner S-->
+        </div>
+    </div>
+    <div id="footer_wrap">
+        <div class="footer">
+            <div class="footer_text1">
+                <p>Twitter :: @Tal_Sack</p>
+                <p>COPYRIGHT ⓒ 2013 DreamingStory All Rights Reserved.</p>  
+            </div>
+        </div>
+    </div>
 </body>
+<script> //클릭 방지
+    $(document).on('click', 'a[href="#"]', function(e){
+        e.preventDefault();
+    });
+</script>
 </html>
