--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <h1>Story</h1>
             </div>
             <div class="section1_mini_text">
+                <!-- <p>Dream Dream Dream</p>
                 <p>Dream Dream Dream</p>
                 <p>Dream Dream Dream</p>
                 <p>Dream Dream Dream</p>
-                <p>Dream Dream Dream</p>
-                <p>Dream Dream Dream</p>
+                <p>Dream Dream Dream</p> -->
             </div>
             <div class="section1_img">
 
