--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>꿈꾸는 동화::Dreaming Story</title>
     <!--나중에 favicon 제작 후 넣기-->
     <!--필요시 js-->
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/slick.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--css-->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mob.css">
 </head>
 <body>
     <div id="top">
@@ -58,16 +61,18 @@
     </div> -->
         <div class="section2">
             <div class="character_box">
-                <li><a href="character_01.html"></a></li> <!--아리카-->
-                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--네리-->
-                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--이화-->
-                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--선율-->
-                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--서이인-->
-                <li><a href="character_02.html"></a></li> <!--아이즈-->
-                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--천솔-->
-                <li><a href="character_08.html"></a></li> <!--모카-->
-                <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--모니카-->
-                <li><a href="character_03.html"></a></li> <!--아루스-->
+                <ul>
+                    <li><a href="character_01.html"></a></li> <!--아리카-->
+                    <li><a href="character_02 .html"></a></li> <!--네리-->
+                    <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--이화-->
+                    <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--선율-->
+                    <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--서이인-->
+                    <li><a href="character_06.html"></a></li> <!--아이즈-->
+                    <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--천솔-->
+                    <li><a href="character_08.html"></a></li> <!--모카-->
+                    <li><a href="#"><p style="font-size: 20px; color: #7d8498;">???</p></a></li> <!--모니카-->
+                    <li><a href="character_10.html"></a></li> <!--아루스-->
+                </ul>
             </div>
         </div>
     </div>
