--- a/character_02.html
+++ b/character_02.html
@@ -33,33 +33,33 @@
         <div class="section">
             <div class="character_box">
                 <div class="character_img">
-                    <img src="img/character_iyze.png" alt="Iyze" width="420px">
+                    <img src="img/character_neri.png" alt="Iyze" width="420px">
                 </div>
                 <div class="character_text">
-                    <h1>아이즈/Iyze/アイズ</h1>
+                    <h1>네리/Neri/ネリ</h1>
                     <br>
-                    <p>010917/20세 . 167cm/56kg . B형</p>
+                    <p>030410/18세 . 165cm/54kg . AB형</p>
                     <br><br>
-                    <p>빼어난 아름다운 외모를 지녔지만 언제나 무표정 또는 심기가 불편한 듯 인상을 
-                        찌푸리는 게 디폴트인 그녀는 굉장히 낯을 가리는 확실한 극내향인입니다.
-                        의심이 많고 사람을 기피하는 그녀는 사교성이나 친화력이 떨어집니다.
-                        많은 서투름 때문에 대인관계는 좁고 가족 외에는 혼자가 편합니다.
-                        예외가 있다면 같은 노트래쉬에 소속된 천솔과 모카에게는 그나마 편하게 느끼고 있습니다.
-                        <br><br>
-                        든든한 남동생과 자신과 반대되는 활발한 막내 여동생이 있기에 다른 타인과의
-                        관계 형성에 대한 필요성은 아직까지는 필요 없다며 스스로 판단하고 있습니다.
-                        학창 시절의 아이즈에게도 '친구'와의 추억이 있었을지 궁금합니다.
-                        <br><br>
-                        '친구'라는 존재는 어떤 존재일까요? 그녀에게는 '친구'라는 단어가 생소하게
-                        느껴집니다. 언젠가는 아이즈 혼자가 아닌 친구와 함께 대량피스퍼즐을 맞추는
-                        존재가 나타나길 바란다면, 먼저 용기내서 다가가는 사람으로 성장하는 것이
-                        인생의 숙제입니다. 퍼즐의 빈 공간을 채우듯이 아이즈의 공허한 마음속에
-                        따뜻함이 채워졌으면 좋겠습니다.
-                        <br><br>
-                        왼손의 붕대가 풀린 모습을 보기는 어렵습니다. 보는 사람도 답답하겠지만
-                        분명 아이즈 스스로가 제일 답답하게 느끼겠지요. 붕대를 계속해서 매일
-                        꾸준히 착용하는 이유는 숨기고 싶은 비밀처럼 꽁꽁 싸매져 있습니다.
-                        누나의 붕대를 꼼꼼하게 감아주는 걸 자주 도와줬던 아루스만이 알고 있는 둘만의 비밀입니다.
+                    <p>항상 막대과자를 먹고 있는 모습만 봐도 막대과자를 얼마나 좋아하는지 알 수 있습니다.
+                        네리에게 막대과자는 아주 특별합니다. 2년 전, 11월 11일에는 네리가 아리카에게
+                        마음을 열게 된 특별한 날이기에 평범한 빼빼로데이가 아닙니다. 아리카에 대한
+                        우정이 각별하다고 느끼는 네리는 언제나 아리카의 행복을 바랍니다.
+                    </p>
+                    <br>
+                    <p>네리는 굉장한 부잣집의 딸입니다. 돈과 재산이 넘쳐나는것에 비해 검소합니다.
+                        주된 지출은 아리카와 같이 군것질을 할 때나 야구배팅센터에 방문할 때입니다.
+                        야구에 대한 애정이 있는 것보다는 야구배팅의 타격감이 좋아서 즐기고 있는 취미 활동입니다.
+                        나무 재질의 야구 배트를 보면 왠지 모르게 막대과자가 떠올라서 배트에 대한 나름의 애정은 있어 보입니다.
+                    </p>
+                    <br>
+                    <p>감정 변화가 드러나지 않는 얼굴은 어떤 기분인지 파악하기 어렵습니다.
+                        즐거움도, 슬픔도, 분노도 드러내지 않는 네리는 마치 로봇처럼 보이기도 합니다.
+                        감정이 없어보이는 네리는 아리카와 함께 하는 순간에만 아주 옅은 미소를 볼 수 있습니다.
+                    </p>
+                    <br>
+                    <p>미래에 대한 꿈은 딱히 없지만 지금처럼 쭉 아리카와 즐거운 일상을 꿈꾸고 있습니다.
+                        공상하는 것을 좋아하는 그녀는 끊임없이 자신만의 세계에 빠집니다.
+                        네리의 세계가 실현된다면 과연 어떤 세계일까요?
                     </p>
                 </div>
             </div>
