--- a/character_01.html
+++ b/character_01.html
@@ -9,6 +9,7 @@
     <!--필요시 js-->
     <!--css-->
     <link rel="stylesheet" href="css/character.css">
+    <link rel="stylesheet" href="css/cha_mob.css">
 </head>
 <body>
     <!-- <div class="bg-video">
