--- a/character_03.html
+++ b/character_03.html
@@ -9,6 +9,7 @@
     <!--필요시 js-->
     <!--css-->
     <link rel="stylesheet" href="css/character.css">
+    <link rel="stylesheet" href="css/cha_mob.css">
 </head>
 <body>
     <!-- <div class="bg-video">
@@ -33,39 +34,30 @@
         <div class="section">
             <div class="character_box">
                 <div class="character_img">
-                    <img src="img/character_arous.png" alt="Arous" width="420px">
+                    <img src="img/character_lee_hwa.png" alt="Lee_Hwa" width="420px">
                 </div>
                 <div class="character_text">
-                    <h1>아루스/Arous/アルス</h1>
+                    <h1>이화/Lee_Hwa/イ・ファ</h1>
                     <br>
-                    <p>021006/19세 . 177cm/66kg . O형</p>
+                    <p>970623/24세 . 170cm/58kg . A형</p>
                     <br><br>
-                    <p>백발의 머리카락, 그리고 표정 변화가 없는 그의 모습을 바라보면 바로 떠오르는 사람이
-                        있습니다. 겉모습만 봐도 아이즈와 똑 닮은 그는 아이즈의 남동생입니다.
-                        누나와 마찬가지로 사람들과 어울리는 걸 싫어하지만 내색하지 않고 적당히 어울리는 
-                        모습은 누나보다는 사교성이 뛰어나다는 것을 알 수 있습니다.  
+                    <p>아마 누구나 그녀를 보면 강한 에너지를 느낄 수 있을 겁니다. 때로는 화사한 봄꽃 같기도 하고, 때로는 뜨거운 불꽃같기도 합니다.
+                        사람을 좋아하고 누구에게나 밝게 대하는 그녀의 태도는 대부분의 사람들에게서 호감을 얻겠지요. 물론 누군가에게는 부담이 될지도 모르겠습니다.
+                        하지만 그녀의 에너지가 동화의 활력이 되어주고 있다는 것은 틀림없는 사실입니다.
                     </p>
                     <br>
                     <p>
-                        어릴 적의 아루스는 막냇동생인 아리카를 떠올리게 합니다. 많은 사람들과 어울리는 것을
-                        좋아했던 과거의 모습은 현재의 그에겐 보이지 않습니다. 그의 속을 들여다보면
-                        사람에 대한 불신과 혐오로 가득합니다. 사람에 대한 부정적인 감정이 생기기 시작한
-                        계기가 분명 있습니다. 온전히 그를 속내를 이해하는 사람은 단 한 사람, 아이즈입니다.
+                        에너지가 많은 만큼 감정의 끓는 점이 낮은 편입니다. 
+                        어떤 감정이든 쉽게 반응하고 그녀의 에너지를 아낌없이 쏟아주지요. 
+                        그만큼 다양한 분야에 열심인 듯 하나 특출난 분야는 없다 할 수 있겠네요.
                     </p>
                     <br>
                     <p>
-                    사람은 싫어하지만 그를 두려움에 떨게 만들지는 않습니다. 그를 공포라는 감정을 경험할 수
-                    있는 건 바로 '물'입니다. 과거에 익수사고가 있었던 아루스에게는 물에 대한 트라우마를
-                    앓고 있습니다. 반짝이는 바다의 멋진 풍경 또한 역겨운 아름다움에 압도당하는 느낌을
-                    받습니다. 깊이를 알 수 없는 바다처럼 평소에 무슨 생각에 빠져있는지 그 누구도
-                    아루스의 생각을 읽을 수 없습니다. 
-                    </p>
-                    <br>
-                    <p>
-                        겉으로 드러나지는 않지만 머릿속이 늘 복잡합니다. 복잡한 생각을 정리하기에는
-                        집안일이 최적입니다. 어쩌다보니 취미도 아닌 특기가 되어버린 요리와 청소.
-                        마치 주부 9단의 모습이 연상케합니다. 집안의 여자들이 엉망진창으로 만들어도
-                        아루스 덕분에 집안은 언제나 그의 성격에 걸맞는 깔끔함을 유지합니다.
+                        어릴 때에는 부모님과 함께 어려운 아이들을 도우며 살았다고 합니다. 
+                        그 아이들 중에는 노트래쉬의 천 솔도 있었죠. 
+                        많은 사람들을 아껴왔던 그녀에게 그도 소중한 사람 중 한 명이었습니다.
+                        하지만 그녀도 선택받은 언섀터인 만큼, 여러 만남과 이별을 겪었겠지요. 
+                        그럼에도 여전히 주변 사람들을 소중히 여기며 활기차게 웃을 수 있는 그 강함이 그녀의 매력이라고 할 수 있겠네요.
                     </p>
                 </div>
             </div>
